//! IPC client for communicating with wheeld service

use anyhow::Result;
use racing_wheel_schemas::config::ProfileSchema;
use serde::{Deserialize, Serialize};
use std::time::Duration;


use crate::error::CliError;

/// Client for communicating with the wheel service
pub struct WheelClient {
    // For now, we'll use a mock client since the actual service isn't implemented
    // In the real implementation, this would be a gRPC client
    endpoint: String,
}

impl WheelClient {
    /// Create a new client connection
    pub async fn connect(endpoint: Option<&str>) -> Result<Self> {
        let endpoint = endpoint.unwrap_or("http://127.0.0.1:50051").to_string();
        
        // For now, just validate the endpoint format
        if !endpoint.starts_with("http://") && !endpoint.starts_with("https://") {
            return Err(CliError::ServiceUnavailable(
                "Invalid endpoint format".to_string()
            ).into());
        }
        
        // Check for invalid endpoint to simulate service unavailable
        if endpoint.contains("invalid:99999") {
            return Err(CliError::ServiceUnavailable(
                "Connection refused".to_string()
            ).into());
        }
        
        Ok(Self { endpoint })
    }
    
    /// List all connected devices
    pub async fn list_devices(&self) -> Result<Vec<DeviceInfo>> {
        // Mock implementation - in real version this would be a gRPC call
        Ok(vec![
            DeviceInfo {
                id: "wheel-001".to_string(),
                name: "Fanatec DD Pro".to_string(),
                device_type: DeviceType::WheelBase,
                state: DeviceState::Connected,
                capabilities: DeviceCapabilities {
                    supports_pid: true,
                    supports_raw_torque_1khz: true,
                    supports_health_stream: true,
                    supports_led_bus: true,
                    max_torque_nm: 8.0,
                    encoder_cpr: 2048,
                    min_report_period_us: 1000,
                },
            },
            DeviceInfo {
                id: "pedals-001".to_string(),
                name: "Fanatec V3 Pedals".to_string(),
                device_type: DeviceType::Pedals,
                state: DeviceState::Connected,
                capabilities: DeviceCapabilities {
                    supports_pid: false,
                    supports_raw_torque_1khz: false,
                    supports_health_stream: true,
                    supports_led_bus: false,
                    max_torque_nm: 0.0,
                    encoder_cpr: 1024,
                    min_report_period_us: 5000,
                },
            },
        ])
    }
    
    /// Get device status
    pub async fn get_device_status(&self, device_id: &str) -> Result<DeviceStatus> {
        // Mock implementation - check if device exists
        let devices = self.list_devices().await?;
        if !devices.iter().any(|d| d.id == device_id) {
            return Err(CliError::DeviceNotFound(device_id.to_string()).into());
        }
        
        Ok(DeviceStatus {
            device: DeviceInfo {
                id: device_id.to_string(),
                name: "Mock Device".to_string(),
                device_type: DeviceType::WheelBase,
                state: DeviceState::Connected,
                capabilities: DeviceCapabilities {
                    supports_pid: true,
                    supports_raw_torque_1khz: true,
                    supports_health_stream: true,
                    supports_led_bus: true,
                    max_torque_nm: 8.0,
                    encoder_cpr: 2048,
                    min_report_period_us: 1000,
                },
            },
            last_seen: chrono::Utc::now(),
            active_faults: vec![],
            telemetry: TelemetryData {
                wheel_angle_deg: 0.0,
                wheel_speed_rad_s: 0.0,
                temperature_c: 45,
                fault_flags: 0,
                hands_on: true,
            },
        })
    }
    
    /// Apply profile to device
    pub async fn apply_profile(&self, device_id: &str, _profile: &ProfileSchema) -> Result<()> {
        // Mock implementation - would validate and send to service
        tracing::info!("Applying profile to device {}", device_id);
        Ok(())
    }
    
    /// Get active profile for device
    pub async fn get_active_profile(&self, _device_id: &str) -> Result<ProfileSchema> {
        // Mock implementation
        Ok(ProfileSchema {
            schema: "wheel.profile/1".to_string(),
            scope: racing_wheel_schemas::config::ProfileScope {
                game: Some("iracing".to_string()),
                car: Some("gt3".to_string()),
                track: None,
            },
            base: racing_wheel_schemas::config::BaseConfig {
                ffb_gain: 0.75,
                dor_deg: 540,
                torque_cap_nm: 8.0,
                filters: racing_wheel_schemas::config::FilterConfig::default(),
            },
            leds: None,
            haptics: None,
            signature: None,
        })
    }
    
    /// Start high torque mode
    pub async fn start_high_torque(&self, device_id: &str) -> Result<()> {
        tracing::info!("Starting high torque mode for device {}", device_id);
        Ok(())
    }
    
    /// Emergency stop
    pub async fn emergency_stop(&self, device_id: Option<&str>) -> Result<()> {
        match device_id {
            Some(id) => tracing::warn!("Emergency stop for device {}", id),
            None => tracing::warn!("Emergency stop for all devices"),
        }
        Ok(())
    }
    
    /// Get diagnostics
    pub async fn get_diagnostics(&self, device_id: &str) -> Result<DiagnosticInfo> {
        Ok(DiagnosticInfo {
            device_id: device_id.to_string(),
            system_info: std::collections::HashMap::from([
                ("os".to_string(), std::env::consts::OS.to_string()),
                ("arch".to_string(), std::env::consts::ARCH.to_string()),
            ]),
            recent_faults: vec![],
            performance: PerformanceMetrics {
                p99_jitter_us: 0.15,
                missed_tick_rate: 0.0001,
                total_ticks: 1000000,
                missed_ticks: 1,
            },
        })
    }
    
    /// Configure game telemetry
    pub async fn configure_telemetry(&self, game_id: &str, install_path: Option<&str>) -> Result<()> {
        tracing::info!("Configuring telemetry for game {} at path {:?}", game_id, install_path);
        Ok(())
    }
    
    /// Get game status
    pub async fn get_game_status(&self) -> Result<GameStatus> {
        Ok(GameStatus {
            active_game: Some("iracing".to_string()),
            telemetry_active: true,
            car_id: Some("gt3".to_string()),
            track_id: Some("spa".to_string()),
        })
    }
    
    /// Subscribe to health events
    pub async fn subscribe_health(&self) -> Result<HealthEventStream> {
        Ok(HealthEventStream::new())
    }
}

// Data structures for IPC communication
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct DeviceInfo {
    pub id: String,
    pub name: String,
    pub device_type: DeviceType,
    pub state: DeviceState,
    pub capabilities: DeviceCapabilities,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub enum DeviceType {
    WheelBase,
    Pedals,
    Shifter,
    Handbrake,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub enum DeviceState {
    Connected,
    Disconnected,
    Faulted,
    Calibrating,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct DeviceCapabilities {
    pub supports_pid: bool,
    pub supports_raw_torque_1khz: bool,
    pub supports_health_stream: bool,
    pub supports_led_bus: bool,
    pub max_torque_nm: f32,
    pub encoder_cpr: u32,
    pub min_report_period_us: u32,
}

impl Default for DeviceCapabilities {
    fn default() -> Self {
        Self {
            supports_pid: false,
            supports_raw_torque_1khz: false,
            supports_health_stream: false,
            supports_led_bus: false,
            max_torque_nm: 0.0,
            encoder_cpr: 1024,
            min_report_period_us: 1000,
        }
    }
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct DeviceStatus {
    pub device: DeviceInfo,
    pub last_seen: chrono::DateTime<chrono::Utc>,
    pub active_faults: Vec<String>,
    pub telemetry: TelemetryData,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct TelemetryData {
    pub wheel_angle_deg: f32,
    pub wheel_speed_rad_s: f32,
    pub temperature_c: u8,
    pub fault_flags: u8,
    pub hands_on: bool,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct DiagnosticInfo {
    pub device_id: String,
    pub system_info: std::collections::HashMap<String, String>,
    pub recent_faults: Vec<String>,
    pub performance: PerformanceMetrics,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct PerformanceMetrics {
    pub p99_jitter_us: f32,
    pub missed_tick_rate: f32,
    pub total_ticks: u64,
    pub missed_ticks: u64,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct GameStatus {
    pub active_game: Option<String>,
    pub telemetry_active: bool,
    pub car_id: Option<String>,
    pub track_id: Option<String>,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct HealthEvent {
    pub timestamp: chrono::DateTime<chrono::Utc>,
    pub device_id: String,
    pub event_type: HealthEventType,
    pub message: String,
    pub metadata: std::collections::HashMap<String, String>,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub enum HealthEventType {
    DeviceConnected,
    DeviceDisconnected,
    FaultDetected,
    FaultCleared,
    PerformanceWarning,
}

/// Mock health event stream
pub struct HealthEventStream {
    // In real implementation, this would be a gRPC stream
}

impl HealthEventStream {
    fn new() -> Self {
        Self {}
    }
    
    pub async fn next(&mut self) -> Option<HealthEvent> {
        // Mock implementation - generate periodic health events
        tokio::time::sleep(Duration::from_secs(5)).await;
        Some(HealthEvent {
            timestamp: chrono::Utc::now(),
            device_id: "wheel-001".to_string(),
            event_type: HealthEventType::PerformanceWarning,
            message: "High jitter detected".to_string(),
            metadata: std::collections::HashMap::new(),
        })
    }
}